# 2022-Cybersecurity

./: .gitignore  README.md
app/: CMakeLists.txt  DH.h  const.h  makefile  utils.cpp  utils.h
app/certificates/: CAcert.pem  CAcrl.pem  servcert.pem
app/mac-makefile/: makefile
app/server/: start-server  start-server.cpp  start.cpp  temppubkey.pem  valgrind-out.txt
app/server/server_infos/: certreq.pem  prvkey.pem  servcert.pem  servcrl.pem
app/server/users_infos/alice/files/: eloi (copy).txt
app/server/users_infos/khabib/: DH.h
app/server/users_infos/khabib/files/: test.txt
app/server/users_infos/userA/: key.pem
app/user/: start-user  start-user.cpp  temppubkey.pem  test.txt  valgrind-out.txt
app/user/user_infos/: key.pem  pubkey.pem  username.txt
app/userA/: start-userA.cpp
app/userB/: CAcert.pem  start-userB.cpp
app/userB/server_infos/: cert.pem
app/userB/user_infos/: key.pem  pubkey.pem
app/user_alice/: eloi.txt  start-user  start-user.cpp  valgrind-out.txt
app/user_alice/user_infos/: key.pem  pubkey.pem
app/user_khabib/: start-user  start-user.cpp  valgrind-out.txt
app/user_khabib/user_infos/: pubkey.pem
docs/: users_key_password.txt
